language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.move:6:16 ───
   │
 6 │         let x: CupC<R> = abort 0;
   │                ^^^^^^^ 'copy' constraint not satisifed
   ·
 6 │         let x: CupC<R> = abort 0;
   │                     - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

